unpackaged/main/default/objects/Opportunity/fields/Critical_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Critical_Event_Type__c</fullName>
    <label>Critical Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AE Outreach to Committed Customer</fullName>
                <isActive>false</isActive>
                <label>AE Outreach to Committed Customer</label>
            </value>
            <value>
                <fullName>Champify</fullName>
            </value>
            <value>
                <fullName>Cold AE Outbound</fullName>
                <isActive>false</isActive>
                <label>Cold AE Outbound</label>
            </value>
            <value>
                <fullName>Cold SDR Outbound</fullName>
                <isActive>false</isActive>
                <label>Cold SDR Outbound</label>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Demo Request</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Gated Content</fullName>
                <isActive>false</isActive>
                <label>Gated Content</label>
            </value>
            <value>
                <fullName>Hosted Event</fullName>
                <isActive>false</isActive>
                <label>Hosted Event</label>
            </value>
            <value>
                <fullName>Intercom Chat</fullName>
            </value>
            <value>
                <fullName>Koala</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Outbound Sequence</fullName>
            </value>
            <value>
                <fullName>Partner Lead</fullName>
            </value>
            <value>
                <fullName>Product Action</fullName>
            </value>
            <value>
                <fullName>Product Signup</fullName>
            </value>
            <value>
                <fullName>Re-engagement</fullName>
                <isActive>false</isActive>
                <label>Re-engagement</label>
            </value>
            <value>
                <fullName>Re-engagment (Inbound)</fullName>
            </value>
            <value>
                <fullName>Re-engagment (Outbound)</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
                <isActive>false</isActive>
                <label>Referral</label>
            </value>
            <value>
                <fullName>SDR Outreach to Committed Customer</fullName>
                <isActive>false</isActive>
                <label>SDR Outreach to Committed Customer</label>
            </value>
            <value>
                <fullName>Tradeshow</fullName>
                <isActive>false</isActive>
                <label>Tradeshow</label>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
                <isActive>false</isActive>
                <label>Webinar</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>