unpackaged/main/default/objects/Opportunity/fields/CRO_New_ARR_Override__c.field-meta.xml
<CustomField>
    <fullName>CRO_New_ARR_Override__c</fullName>
    <description>Replaces the unweighted New ARR amount entered by the Account Executive. Used for forecasting purposes by the CRO.</description>
    <inlineHelpText>Replaces the unweighted New ARR amount entered by the Account Executive. Used for forecasting purposes by the CRO.</inlineHelpText>
    <label>CRO New ARR Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>