unpackaged/main/default/objects/Opportunity/fields/Current_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Current_Date_Time__c</fullName>
    <description>Used to timestamp data extracts</description>
    <formula>NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Date/Time</label>
    <type>DateTime</type>
</CustomField>