unpackaged/main/default/objects/Opportunity/fields/Customer_Success_Tier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_Tier__c</fullName>
    <label>Customer Success Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Success_Tiers</valueSetName>
    </valueSet>
</CustomField>