unpackaged/main/default/objects/Opportunity/fields/Days_From_SQL_to_Qual_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Days_From_SQL_to_Qual_Meeting__c</fullName>
    <formula>IF(
 Sales_Qualified_Lead__c &amp;&amp; NOT(ISBLANK(Sales_Qualification_Meeting_At__c)),
 Sales_Qualification_Meeting_At__c - Qualification_Meeting_Set_At__c,
 NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of days between the date when the qualification meeting was set and when the meeting actually occurred.</inlineHelpText>
    <label>Days From SQL to Qual Meeting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>