unpackaged/main/default/objects/Opportunity/fields/Days_Since_Last_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Meeting__c</fullName>
    <formula>TODAY()-Last_Meeting_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Meeting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>