unpackaged/main/default/objects/Opportunity/fields/Days_to_Qualification_Decision__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Qualification_Decision__c</fullName>
    <formula>IF(
 NOT(ISBLANK(Sales_Qualification_Meeting_At__c)) &amp;&amp; RecordType.Name = &quot;Enterprise&quot;,
 IF(
  Sales_Qualified_Opportunity__c,
  Sales_Qualified_At__c - Sales_Qualification_Meeting_At__c,
  IF(
   IsClosed,
   CloseDate - Sales_Qualification_Meeting_At__c,
   TODAY() - Sales_Qualification_Meeting_At__c
  )
 ),
 NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of days between the qualification meeting and the current date (for open stage 1 opportunities) or the Sales Qualified At date (for open stage 2+ opportunities) or the close date (for lost opportunities that never SQOed). Applies only to non-renewals.</inlineHelpText>
    <label>Days to Qualification Decision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>