unpackaged/main/default/objects/Opportunity/fields/Deal_Count__c.field-meta.xml
<CustomField>
    <fullName>Deal_Count__c</fullName>
    <formula>IF(
 ISPICKVAL(Booking_Type__c,&quot;Debook&quot;),
 -1,
 IF(
  Booking_Channel_Annualized_Revenue__c = &quot;Churn&quot; || ISPICKVAL(Subtype__c,&quot;Baseline Transfer - In&quot;) || ISPICKVAL(Subtype__c,&quot;Baseline Transfer - Out&quot;),
  0,
  1
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Equal to 1 when Booking Type is either &quot;Standard&quot; or &quot;Putback&quot; and -1 for Booking Type &quot;Debook&quot;. Used when counting the number of deals closed in a given period.</inlineHelpText>
    <label>Deal Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>