unpackaged/main/default/objects/Opportunity/fields/Deal_Desk_Review__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Review__c</fullName>
    <label>Deal Desk Review</label>
    <length>255</length>
    <type>Text</type>
</CustomField>