unpackaged/main/default/objects/Opportunity/fields/Deal_Desk_Status__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Status__c</fullName>
    <formula>IF(
 IsClosed,
 &quot;complete&quot;,
 IF(
  ISBLANK(Contract.Proposal_Status__c),
  &quot;no proposal&quot;,
  Contract.Proposal_Status__c
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Desk Status</label>
    <type>Text</type>
</CustomField>