unpackaged/main/default/objects/Opportunity/fields/Deal_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>Deal_Internal_ID__c</fullName>
    <formula>Opportunity_ID_case_safe__c&amp;
 &quot;-&quot;&amp;CASE(Business_Unit__r.Plan_Name__c,
  &quot;Enterprise&quot;,&quot;E&quot;,
  &quot;Commercial&quot;,&quot;C&quot;,
  &quot;Business&quot;,&quot;B&quot;,
  &quot;Pro&quot;,&quot;B&quot;,
  &quot;Team&quot;,&quot;T&quot;,
  &quot;X&quot;
 )&amp;
 CASE(Business_Unit__r.Platform_Type__c,
  &quot;Cloud&quot;,&quot;C&quot;,
  &quot;Self-hosted&quot;,&quot;O&quot;,
  &quot;Air-gapped&quot;,&quot;A&quot;,
  &quot;Managed Cloud&quot;,&quot;M&quot;,
  &quot;X&quot;
 )&amp;&quot;-&quot;&amp;
 CASE(Business_Unit__r.Support_SLA__r.Tier__c,
   &quot;Basic&quot;,&quot;SB&quot;,
   &quot;Basic [Legacy]&quot;,&quot;SB&quot;,
   &quot;Enterprise&quot;,&quot;SE&quot;,
   &quot;Enterprise [Legacy]&quot;,&quot;SE&quot;,
   &quot;Premium&quot;,&quot;SP&quot;,
   &quot;Custom&quot;,&quot;SC&quot;,
   &quot;SX&quot;
 )&amp;
 IF(Business_Unit__r.Platform_Seats_Unlimited__c,&quot;-EL&quot;,NULL)&amp;
 IF(Business_Unit__r.Total_Seats__c=0,NULL,&quot;-US&quot;&amp;TEXT(Business_Unit__r.Total_Seats__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Internal ID</label>
    <type>Text</type>
</CustomField>