unpackaged/main/default/objects/Opportunity/fields/Deal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Deal_Notes__c</fullName>
    <inlineHelpText>Miscellaneous notes related to the deal.</inlineHelpText>
    <label>Deal Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>