unpackaged/main/default/objects/Opportunity/fields/Debook_Putback_Details__c.field-meta.xml
<CustomField>
    <fullName>Debook_Putback_Details__c</fullName>
    <label>Debook/Putback Details</label>
    <type>TextArea</type>
</CustomField>