unpackaged/main/default/objects/Opportunity/fields/Debook_Putback_Reason__c.field-meta.xml
<CustomField>
    <fullName>Debook_Putback_Reason__c</fullName>
    <label>Debook/Putback Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Restructure - Concession</fullName>
            </value>
            <value>
                <fullName>Restructure - Product Swap</fullName>
            </value>
            <value>
                <fullName>Restructure - Upside</fullName>
            </value>
            <value>
                <fullName>Write-off - Non-payment</fullName>
            </value>
            <value>
                <fullName>Write-off - Billing Error</fullName>
            </value>
            <value>
                <fullName>Write-off - Concession</fullName>
            </value>
            <value>
                <fullName>Write-off - Partial Payment</fullName>
            </value>
            <value>
                <fullName>Replacement - Deal Error</fullName>
            </value>
            <value>
                <fullName>Replacement - Product Swap</fullName>
            </value>
            <value>
                <fullName>Replacement - Concession</fullName>
            </value>
            <value>
                <fullName>Replacement - Fulfillment Change</fullName>
            </value>
            <value>
                <fullName>Replacement - Billing Error</fullName>
            </value>
            <value>
                <fullName>Baseline Transfer</fullName>
            </value>
            <value>
                <fullName>Winback</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>