unpackaged/main/default/objects/Opportunity/fields/Debooked_deal__c.field-meta.xml
<CustomField>
    <fullName>Debooked_deal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>True if the opportunity has been debooked.</inlineHelpText>
    <label>Debooked deal?</label>
    <type>Checkbox</type>
</CustomField>