unpackaged/main/default/objects/Opportunity/fields/Decision_criteria__c.field-meta.xml
<CustomField>
    <fullName>Decision_criteria__c</fullName>
    <description>&lt;a href=&quot;https://retoolconfluence.atlassian.net/wiki/spaces/SAL/pages/45842590/MEDDPICC+sales+methodology&quot; target=&quot;_blank&quot;&gt;Learn more about MEDDPICC&lt;/a&gt;</description>
    <inlineHelpText>Describe the prospect&#39;s decision criteria (how will they select a solution to their problem?)</inlineHelpText>
    <label>[D] Decision Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>