unpackaged/main/default/objects/Opportunity/fields/Decision_process_D__c.field-meta.xml
<CustomField>
    <fullName>Decision_process_D__c</fullName>
    <description>&lt;a href=&quot;https://retoolconfluence.atlassian.net/wiki/spaces/SAL/pages/45842590/MEDDPICC+sales+methodology&quot; target=&quot;_blank&quot;&gt;Learn more about MEDDPICC&lt;/a&gt;</description>
    <inlineHelpText>What is the process for making a decision and moving forward? Who is involved and what steps are required? Does the cost of the proposal affect the process? Note that this is distinct from the decision (evaluation) criteria.</inlineHelpText>
    <label>[D] Decision Process</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>