unpackaged/main/default/objects/Opportunity/fields/Desired_outcomes__c.field-meta.xml
<CustomField>
    <fullName>Desired_outcomes__c</fullName>
    <description>&lt;a href=&quot;https://retoolconfluence.atlassian.net/wiki/spaces/SAL/pages/45842590/MEDDPICC+sales+methodology&quot; target=&quot;_blank&quot;&gt;Learn more about MEDDPICC&lt;/a&gt;</description>
    <inlineHelpText>What outcomes or KPIs will indicate success? Use metrics whenever possible (e.g., &quot;reduce maintenance time of X existing app from Y to Z&quot;)</inlineHelpText>
    <label>[M] Metrics &amp; Desired Outcomes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>