unpackaged/main/default/objects/Opportunity/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <label>Discount Amount</label>
    <summarizedField>OpportunityLineItem.Total_Discount_Amount__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>