unpackaged/main/default/objects/Opportunity/fields/Discount_Pct__c.field-meta.xml
<CustomField>
    <fullName>Discount_Pct__c</fullName>
    <formula>IF(Amount = 0,NULL,(Discount_Amount__c / List_Price_Amount__c)*-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>