unpackaged/main/default/objects/Opportunity/fields/Employees_at_Close__c.field-meta.xml
<CustomField>
    <fullName>Employees_at_Close__c</fullName>
    <inlineHelpText>The number of employees on the associated account at the time when the opportunity was closed (won or lost)</inlineHelpText>
    <label>Employees at Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>