unpackaged/main/default/objects/Opportunity/fields/Employees_at_SQL__c.field-meta.xml
<CustomField>
    <fullName>Employees_at_SQL__c</fullName>
    <inlineHelpText>The number of employees recorded on the associated account on the day when this opportunity was marked as Sales Accepted Lead (SAL). This is the same day as when the opportunity entered stage 1 or the day the qualification meeting was set.</inlineHelpText>
    <label>Employees at SQL (S1)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>