unpackaged/main/default/objects/Opportunity/fields/Employees_at_SQO__c.field-meta.xml
<CustomField>
    <fullName>Employees_at_SQO__c</fullName>
    <inlineHelpText>The number of employees recorded on the associated account on the day when this opportunity was marked as a Sales Qualified Opportunity (SQO). This is the same as the day when the opportunity entered stage 2.</inlineHelpText>
    <label>Employees at SQO (S2)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>