unpackaged/main/default/objects/Opportunity/fields/Expansion_AR__c.field-meta.xml
<CustomField>
    <fullName>Expansion_AR__c</fullName>
    <formula>if(Booking_Channel_Annualized_Revenue__c=&quot;Expansion&quot;,Forecast_New_AR__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expansion AR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>