unpackaged/main/default/objects/Opportunity/fields/Expansion_Reason__c.field-meta.xml
<CustomField>
    <fullName>Expansion_Reason__c</fullName>
    <label>Expansion Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New use case</fullName>
            </value>
            <value>
                <fullName>New team</fullName>
            </value>
            <value>
                <fullName>Existing use case</fullName>
            </value>
            <value>
                <fullName>Discount expiring</fullName>
            </value>
            <value>
                <fullName>New products</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>