unpackaged/main/default/objects/Opportunity/fields/Expected_Deal_Count__c.field-meta.xml
<CustomField>
    <fullName>Expected_Deal_Count__c</fullName>
    <formula>Probability * Deal_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Deal Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>