unpackaged/main/default/objects/Opportunity/fields/Expected_Forecast_Total_AR__c.field-meta.xml
<CustomField>
    <fullName>Expected_Forecast_Total_AR__c</fullName>
    <formula>Forecast_Total_AR__c * Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Forecast Total AR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>