unpackaged/main/default/objects/Opportunity/fields/Expected_Forecast_Total_NRR__c.field-meta.xml
<CustomField>
    <fullName>Expected_Forecast_Total_NRR__c</fullName>
    <formula>Probability * Forecast_Total_NRR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Forecast Total NRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>