unpackaged/main/default/objects/Opportunity/fields/Expected_Logos__c.field-meta.xml
<CustomField>
    <fullName>Expected_Logos__c</fullName>
    <formula>Probability * Total_Logos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Logos multiplied by the opportunity probability.</inlineHelpText>
    <label>Expected Logos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>