unpackaged/main/default/objects/Opportunity/fields/Expected_New_ARR__c.field-meta.xml
<CustomField>
    <fullName>Expected_New_ARR__c</fullName>
    <formula>IF(ISPICKVAL(StageName,&quot;Churn&quot;),1,Probability) * New_ARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected New ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>