unpackaged/main/default/objects/Opportunity/fields/Expected_SQOs__c.field-meta.xml
<CustomField>
    <fullName>Expected_SQOs__c</fullName>
    <formula>IF(
 RecordType.Name = &quot;Enterprise&quot;,
 IF(
  Sales_Qualified_Opportunity__c,
  1,
  IF(
   IsLost__c,
   0,
   Probability
  )
 ),
 NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected SQOs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>