unpackaged/main/default/objects/Opportunity/fields/Expected_Total_ARR__c.field-meta.xml
<CustomField>
    <fullName>Expected_Total_ARR__c</fullName>
    <formula>Probability * Total_ARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Total ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>