unpackaged/main/default/objects/Opportunity/fields/Expected_Total_MRR__c.field-meta.xml
<CustomField>
    <fullName>Expected_Total_MRR__c</fullName>
    <formula>Probability * Total_MRR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total MRR multiplied by the opportunity probability.</inlineHelpText>
    <label>Expected Total MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>