unpackaged/main/default/objects/Opportunity/fields/Expected_Total_NRR__c.field-meta.xml
<CustomField>
    <fullName>Expected_Total_NRR__c</fullName>
    <formula>Probability * Total_NRR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total NRR multiplied by the opportunity probability.</inlineHelpText>
    <label>Expected Total NRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>