unpackaged/main/default/objects/Opportunity/fields/First_Contact_Role_Email__c.field-meta.xml
<CustomField>
    <fullName>First_Contact_Role_Email__c</fullName>
    <formula>First_Contact_Role__r.Email</formula>
    <label>First Contact Role Email</label>
    <type>Text</type>
</CustomField>