unpackaged/main/default/objects/Opportunity/fields/Forecast_Method__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Method__c</fullName>
    <defaultValue>&quot;Manual&quot;</defaultValue>
    <label>Forecast Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Forecast_Method</valueSetName>
    </valueSet>
</CustomField>