unpackaged/main/default/objects/Opportunity/fields/Forecast_New_AR__c.field-meta.xml
<CustomField>
    <fullName>Forecast_New_AR__c</fullName>
    <formula>Forecast_Total_AR__c - Renewal_Baseline_Annualized_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast New AR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>