unpackaged/main/default/objects/Opportunity/fields/Forecast_Total_AR__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Total_AR__c</fullName>
    <label>Forecast Total AR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>