unpackaged/main/default/objects/Opportunity/fields/Fulfilment_Method__c.field-meta.xml
<CustomField>
    <fullName>Fulfilment_Method__c</fullName>
    <formula>IF(Contract.Marketplace_Terms_Included__c,TEXT(Contract.Marketplace_Terms_Marketplace_Name__c),&quot;Direct&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fulfilment Method</label>
    <type>Text</type>
</CustomField>