unpackaged/main/default/objects/Opportunity/fields/Geo_Country__c.field-meta.xml
<CustomField>
    <fullName>Geo_Country__c</fullName>
    <label>Geo: Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>