unpackaged/main/default/objects/Opportunity/fields/Geo_Region__c.field-meta.xml
<CustomField>
    <fullName>Geo_Region__c</fullName>
    <label>Geo: Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Geo_Region</valueSetName>
    </valueSet>
</CustomField>