unpackaged/main/default/objects/Opportunity/fields/Geo_Subregion__c.field-meta.xml
<CustomField>
    <fullName>Geo_Subregion__c</fullName>
    <label>Geo: Subregion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Geo_Subregion</valueSetName>
    </valueSet>
</CustomField>