unpackaged/main/default/objects/Opportunity/fields/Gong__Gong_Count__c.field-meta.xml
<CustomField>
    <fullName>Gong__Gong_Count__c</fullName>
    <description>Auto computed field that is used in reports for aggregations.</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto computed field that is used in reports for aggregations.</inlineHelpText>
    <label>Gong Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>