unpackaged/main/default/objects/Opportunity/fields/Has_Attached_Services__c.field-meta.xml
<CustomField>
    <fullName>Has_Attached_Services__c</fullName>
    <formula>ISPICKVAL(Attached_Services_Status__c,&quot;Won&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Attached Services?</label>
    <type>Checkbox</type>
</CustomField>