unpackaged/main/default/objects/Opportunity/fields/Has_Attached_Workflows__c.field-meta.xml
<CustomField>
    <fullName>Has_Attached_Workflows__c</fullName>
    <formula>INCLUDES(Solution_Set__c,&quot;Workflows&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Attached Workflows?</label>
    <type>Checkbox</type>
</CustomField>