unpackaged/main/default/objects/Opportunity/fields/Has_controlling_contract__c.field-meta.xml
<CustomField>
    <fullName>Has_controlling_contract__c</fullName>
    <formula>Id =  Contract.Opportunity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if a bi-directional link exists between this opportunity and the associated contract.</inlineHelpText>
    <label>Has Controlling Contract?</label>
    <type>Checkbox</type>
</CustomField>