unpackaged/main/default/objects/Opportunity/fields/Has_Qualification_Journey__c.field-meta.xml
<CustomField>
    <fullName>Has_Qualification_Journey__c</fullName>
    <formula>NOT(ISBLANK(Qualification_Journey__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Qualification Journey?</label>
    <type>Checkbox</type>
</CustomField>