unpackaged/main/default/objects/Opportunity/fields/Has_Services__c.field-meta.xml
<CustomField>
    <fullName>Has_Services__c</fullName>
    <formula>Has_Attached_Services__c || Has_Included_Services__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Services?</label>
    <type>Checkbox</type>
</CustomField>