unpackaged/main/default/objects/Opportunity/fields/HoS_Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>HoS_Forecast_Category__c</fullName>
    <description>Used to capture Head of Sales forecast category classifications.</description>
    <inlineHelpText>Used to capture Head of Sales forecast category classifications.</inlineHelpText>
    <label>HoS Forecast Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Forecast_Categories</valueSetName>
    </valueSet>
</CustomField>