unpackaged/main/default/objects/Opportunity/fields/HoS_New_ARR_Override__c.field-meta.xml
<CustomField>
    <fullName>HoS_New_ARR_Override__c</fullName>
    <description>Replaces the unweighted New ARR amount entered by the Account Executive. Used for forecasting purposes by the Head of Sales.</description>
    <inlineHelpText>Replaces the unweighted New ARR amount entered by the Account Executive. Used for forecasting purposes by the Head of Sales.</inlineHelpText>
    <label>HoS New ARR Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>