unpackaged/main/default/objects/Opportunity/fields/I_am_Sales_Engineer__c.field-meta.xml
<CustomField>
    <fullName>I_am_Sales_Engineer__c</fullName>
    <formula>IF(Sales_Engineer__c = $User.Id,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if the current user is the listed Sales Engineer</inlineHelpText>
    <label>Opportunity I Am Sales Engineer?</label>
    <type>Checkbox</type>
</CustomField>