unpackaged/main/default/objects/Opportunity/fields/Included_Services_Amount__c.field-meta.xml
<CustomField>
    <fullName>Included_Services_Amount__c</fullName>
    <label>Included Services Amount</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Family__c</field>
        <operation>equals</operation>
        <value>Professional Services</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>