unpackaged/main/default/objects/Opportunity/fields/Incremental_Growth_Pct__c.field-meta.xml
<CustomField>
    <fullName>Incremental_Growth_Pct__c</fullName>
    <formula>CASE(RecordType.Name,
  &quot;Renewal&quot;, IF(
    Renewal_Baseline_Annualized_Revenue__c != 0,
    New_Annualized_Revenue__c / Renewal_Baseline_Annualized_Revenue__c,
    NULL
   ),
  &quot;Enterprise&quot;,IF(
    NOT(Is_Booking_Base__c) &amp;&amp; Expansion_Baseline_Annualized_Revenue__c != 0,
    New_Annualized_Revenue__c / Expansion_Baseline_Annualized_Revenue__c,
    NULL
  ),
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incremental Growth %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>