unpackaged/main/default/objects/Opportunity/fields/Invoiced_On__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_On__c</fullName>
    <description>Records the date when `Has Been Invoiced?` is checked true. Effective Q3 2023.</description>
    <inlineHelpText>Records the date when `Has Been Invoiced?` is checked true. Effective Q3 2023.</inlineHelpText>
    <label>Invoiced On</label>
    <type>Date</type>
</CustomField>