unpackaged/main/default/objects/Opportunity/fields/Is_Booked_in_Future_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Is_Booked_in_Future_Quarter__c</fullName>
    <formula>Booking_Date__c &gt; CloseDate &amp;&amp; Booking_Quarter__c != Close_Quarter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Booked in Future Quarter?</label>
    <type>Checkbox</type>
</CustomField>