unpackaged/main/default/objects/Opportunity/fields/Is_BU_Most_Recent_Base__c.field-meta.xml
<CustomField>
    <fullName>Is_BU_Most_Recent_Base__c</fullName>
    <formula>Id = Business_Unit__r.Most_Recent_Base_Opportunity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is BU Most Recent Base</label>
    <type>Checkbox</type>
</CustomField>