unpackaged/main/default/objects/Opportunity/fields/Is_Committed_Booking__c.field-meta.xml
<CustomField>
    <fullName>Is_Committed_Booking__c</fullName>
    <description>[Utilized by Xactly]</description>
    <formula>IF(
  IsWon = TRUE || ISPICKVAL(StageName,&#39;Churn&#39;) || (ISPICKVAL(Subtype__c,&#39;Renewal - Pilot Conversion&#39;) &amp;&amp; ISPICKVAL(StageName,&#39;Closed Lost&#39;)),
  TRUE,
  FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if the opportunity represents a valid booking for the committed business.</inlineHelpText>
    <label>Is Committed Booking?</label>
    <type>Checkbox</type>
</CustomField>