unpackaged/main/default/objects/Opportunity/fields/Is_Current_Term__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Term__c</fullName>
    <formula>IF(
  Term_Number__c &gt;= 0,
  Term_Number__c = Business_Unit__r.Most_Recent_Base_Opportunity__r.Term_Number__c,
  FALSE
)</formula>
    <label>Is Current Term?</label>
    <type>Checkbox</type>
</CustomField>