unpackaged/main/default/objects/Opportunity/fields/Is_Fast_Pass__c.field-meta.xml
<CustomField>
    <fullName>Is_Fast_Pass__c</fullName>
    <formula>Qualification_Journey__r.Is_Fast_Pass__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Fast Pass?</label>
    <type>Checkbox</type>
</CustomField>